MOD
Se realiza actualizacion de README y archivo LICENSE